--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.2",
     "web-vitals": "^2.1.4"
